--- a/src/main/webapp/WEB-INF/view/admin/tasks/list.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/list.html
@@ -39,10 +39,20 @@
 <p id="title">Задачи</p>
 
 <div class="container">
-    <div class="alert alert-danger text-center mx-auto" role="alert" style="width: 50%"
-         th:text="${error}" th:if="${error}"><br/></div>
-    <div class="alert alert-success text-center mx-auto" role="alert" style="width: 50%"
-         th:text="${success}" th:if="${success}"><br/></div>
+    <div class="alert alert-success alert-dismissible text-center mx-auto" role="alert"
+         style="width: 50%; padding: .5rem" th:if="${success}">
+        <span th:text="${success}"></span>
+        <button type="button" class="close" data-dismiss="alert" style="padding: .5rem 1rem">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="alert alert-danger alert-dismissible text-center mx-auto" role="alert"
+         style="width: 50%; padding: .5rem" th:if="${error}">
+        <span th:text="${error}"></span>
+        <button type="button" class="close" data-dismiss="alert" style="padding: .5rem 1rem">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
 
     <div class="input-group mb-3 mx-auto" style="width: 50%">
         <input type="text" id="task-title" class="form-control"
