--- a/src/main/webapp/WEB-INF/view/admin/tasks/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/edit.html
@@ -67,14 +67,14 @@
                 </div>
                 <div class="form-row align-items-center">
                     <div class="col-md-3"><label for="width" style="width: auto">Ширина:</label></div>
-                    <div class="col-md-3">
+                    <div class="col-md-3" style="min-width: 8rem">
                         <input type="number" min="0" class="form-control form-control-sm text-dark"
                                id="width" th:field="*{width}">
                     </div>
                 </div>
                 <div class="form-row align-items-center">
                     <div class="col-md-3"><label for="height" style="width: auto">Высота:</label></div>
-                    <div class="col-md-3">
+                    <div class="col-md-3" style="min-width: 8rem">
                         <input type="number" id="height" min="0" class="form-control form-control-sm text-dark"
                                th:field="*{height}">
                     </div>
