--- a/src/main/webapp/WEB-INF/view/admin/tasks/tasks-table.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/tasks-table.html
@@ -3,10 +3,10 @@
 <div id="tasks-table">
     <table class="table border center" aria-describedby="title">
         <tr style="text-align: center">
-            <th id="index">№</th>
-            <th id="title">Заголовок</th>
-            <th id="status">Статус</th>
-            <th id="actions">Действия</th>
+            <th id="index" style="vertical-align: middle">№</th>
+            <th id="title" style="vertical-align: middle">Заголовок</th>
+            <th id="status" style="vertical-align: middle">Статус</th>
+            <th id="actions" style="vertical-align: middle">Действия</th>
         </tr>
 
         <!--/*@thymesVar id="taskList" type="java.util.List<ru.spbu.distolymp.dto.admin.tasks.tasks.TaskListDto>"*/-->
