--- a/src/main/webapp/WEB-INF/view/admin/tasks/list.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/list.html
@@ -17,13 +17,13 @@
 
 <div th:replace="fragments/header :: #header"></div>
 
-<body class="bgGrey">
+<body class="bgGrey" style="min-width: 612px">
 
 <div th:replace="fragments/menu-staff :: #menustaff"></div>
 
-<p id="title">Задачи</p>
+<p id="title" style="margin-top: 1rem; margin-bottom: .5rem">Задачи</p>
 
-<div class="container">
+<div class="container" style="min-width: 38rem">
     <div class="alert alert-success alert-dismissible text-center mx-auto" role="alert"
          style="width: 50%; padding: .5rem; min-width: 25rem" th:if="${success}">
         <span th:text="${success}"></span>
@@ -82,7 +82,7 @@
         </div>
     </div>
 
-    <ul class="actions text-center" style="width: 50%; min-width: 25rem">
+    <ul class="actions text-center" style="width: 50%; min-width: 25rem; margin-bottom: 1rem">
         <li style="width: 100%">
             <a th:href="@{/tasks/add}" class="abutton">Создать новую задачу</a>
         </li>
