--- a/src/main/webapp/WEB-INF/view/admin/tasks/list.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/list.html
@@ -53,16 +53,17 @@
     <div id="taskCopyModal" class="modal fade taskCopy" tabindex="-1" role="dialog"
          aria-labelledby="taskCopyNamePopup" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
+            <div class="modal-content" style="max-width: 30rem; margin-right: auto; margin-left: auto">
+                <div class="modal-header" style="padding-bottom: .5rem">
                     <h5 class="modal-title">Копирование задачи</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" style="padding-top: .5rem; padding-bottom: .5rem">
                     <!--/*@thymesVar id="taskForCopy" type="ru.spbu.distolymp.dto.admin.tasks.tasks.TaskListDto"*/-->
-                    <form id="taskCopyForm" th:object="${taskForCopy}" th:action="@{/tasks/copy}" method="post"  class="needs-validation was-validated" novalidate>
+                    <form id="taskCopyForm" th:object="${taskForCopy}" th:action="@{/tasks/copy}" method="post"
+                          class="needs-validation was-validated" style="margin-top: .4rem" novalidate>
                         <div class="form-group text-left">
                             <label for="newTaskTitle">Заголовок новой задачи:</label>
                             <input th:field="*{title}" type="text" class="form-control"
@@ -72,11 +73,10 @@
                         </div>
                     </form>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Отмена</button>
-                    <button type="submit" class="btn btn-success" form="taskCopyForm" onclick="trimInputs('newTaskTitle')">
-                        Ок
-                    </button>
+                <div class="modal-footer" style="padding-top: .5rem">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal" style="min-width: 6rem">Отмена</button>
+                    <button type="submit" class="btn btn-success" form="taskCopyForm" onclick="trimInputs('newTaskTitle')"
+                            style="min-width: 6rem">Ок</button>
                 </div>
             </div>
         </div>
