--- a/src/main/webapp/WEB-INF/view/admin/tasks/list.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/list.html
@@ -48,7 +48,7 @@
         </button>
     </div>
 
-    <div id="towns-table" th:replace="admin/tasks/tasks-table :: #tasks-table"></div>
+    <div id="towns-table" th:replace="admin/tasks/tasks-table :: #tasks-table" style="min-width: 30rem"></div>
 
     <div id="taskCopyModal" class="modal fade taskCopy" tabindex="-1" role="dialog"
          aria-labelledby="taskCopyNamePopup" aria-hidden="true">
